--- a/src/index.html
+++ b/src/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <title>App</title>
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport"
-    content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
-  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>React boiler</title>
-</head>
-
-<body>
-  <img src="assets/images/test.jpg" alt="test" />
-
-  <div id="root"></div>
-</body>
-
+  <body>
+    <img src="assets/images/test.jpg" alt="" />
+    <div id="app"></div>
+  </body>
 </html>
