change webpack config

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <img src="assets/images/test.jpg" alt="" />
-    <div id="app"></div>
+    <img src="./assets/images/test.jpg" alt="test" />
+    <div id="root"></div>
   </body>
 </html>
